TestSuite/PascalABCTests/errors/err0051.pas
type TClass = class
constructor Create; override;
begin
end;

end;

begin

end.